--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,15 @@ aioitertools==0.11.0
 aiosignal==1.3.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.13.1
+anyio==4.4.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
 asttokens==2.4.1
 attrs==23.2.0
 backoff==2.2.1
+beautifulsoup4==4.12.3
+bleach==6.1.0
 botocore==1.34.106
 cachetools==5.3.3
 certifi==2024.6.2
@@ -23,12 +29,15 @@ cryptography==42.0.8
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.14
 dill==0.3.8
 distlib==0.3.8
 executing==2.0.1
+fastjsonschema==2.19.1
 filelock==3.15.1
 fonttools==4.53.0
+fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.6.0
 google-api-core==2.19.0
@@ -44,14 +53,20 @@ ipycytoscape==1.3.3
 ipykernel==6.29.4
 ipython==8.25.0
 ipywidgets==8.1.3
+isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
 jmespath==1.0.1
 jsonpickle==3.0.3
+jsonpointer==3.0.0
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+jupyter-events==0.10.0
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+jupyter_server==2.14.1
+jupyter_server_terminals==0.5.3
+jupyterlab_pygments==0.3.0
 jupyterlab_widgets==3.0.11
 kiwisolver==1.4.5
 linkify-it-py==2.0.3
@@ -62,9 +77,13 @@ matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.1
 mdurl==0.1.2
 memray==1.12.0
+mistune==3.0.2
 mpmath==1.3.0
 msgpack==1.0.8
 multidict==6.0.5
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.4
@@ -80,8 +99,10 @@ opentelemetry-proto==1.25.0
 opentelemetry-sdk==1.25.0
 opentelemetry-semantic-conventions==0.46b0
 opentelemetry-util-http==0.46b0
+overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
+pandocfilters==1.5.1
 parso==0.8.4
 pbr==6.0.0
 pexpect==4.9.0
@@ -109,10 +130,11 @@ pylatexenc==2.10
 pyparsing==3.1.2
 pyspnego==0.11.0
 python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
-qc_grader @ git+https://github.com/qiskit-community/Quantum-Challenge-Grader.git@1742268fcb91b9f53c7f9ca83d3511adf200f3a9
+qc_grader @ git+https://github.com/qiskit-community/Quantum-Challenge-Grader.git@312470070302f108cc55b67142b6fd083e844904
 qiskit==1.0.2
 qiskit-aer==0.14.2
 qiskit-ibm-provider==0.11.0
@@ -120,10 +142,13 @@ qiskit-ibm-runtime==0.23.0
 qiskit-qasm3-import==0.5.0
 qiskit-serverless==0.12.0
 qiskit-transpiler-service==0.4.3
+qiskit_code_assistant_jupyterlab==0.2.5
 ray==2.24.0
 referencing==0.35.1
 requests==2.32.2
 requests_ntlm==1.3.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==13.7.1
 rpds-py==0.18.1
 rsa==4.9
@@ -131,25 +156,34 @@ rustworkx==0.14.2
 s3fs==2024.6.0
 scipy==1.13.1
 seaborn==0.13.2
+Send2Trash==1.8.3
 six==1.16.0
 smart-open==7.0.4
+sniffio==1.3.1
+soupsieve==2.5
 spectate==1.0.1
 stack-data==0.6.3
 stevedore==5.2.0
 symengine==0.11.0
 sympy==1.12.1
 tenacity==8.3.0
+terminado==0.18.1
 textual==0.68.0
+tinycss2==1.3.0
 tornado==6.4.1
 tqdm==4.66.4
 traitlets==5.14.3
 typeguard==4.3.0
+types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.2
 tzdata==2024.1
 uc-micro-py==1.0.3
+uri-template==1.3.0
 urllib3==2.2.1
 virtualenv==20.26.2
 wcwidth==0.2.13
+webcolors==24.6.0
+webencodings==0.5.1
 websocket-client==1.8.0
 websockets==12.0
 widgetsnbextension==4.0.11
